# eloqsql

./: .clangd  .gitignore  .gitmodules  .private_modules  CMakeLists.txt  LICENSE  README.md  build.sh  configure.cmake  my-config.cnf
storage/eloq/: CMakeLists.txt  README.md  build_cass_driver.cmake  build_eloq_log_service.cmake  build_eloq_metrics.cmake  build_log_service.cmake  build_tx_service.cmake  date.h  eloq_buff.h  eloq_catalog_factory.cpp  eloq_catalog_factory.h  eloq_catalog_name.h  eloq_db.cpp  eloq_db_dl.h  eloq_errors.cpp  eloq_errors.h  eloq_i_s.cc  eloq_i_s.h  eloq_key.h  eloq_key_def.cc  eloq_key_def.h  eloq_schema.cpp  eloq_schema.h  eloq_system_handler.cpp  eloq_system_handler.h  eloq_tests.hpp  eloqsql_catalog_factory.cpp  eloqsql_catalog_factory.h  eloqsql_key.h  eloqsql_schema.cpp  eloqsql_schema.h  ha_eloq.cc  ha_eloq.h  ha_eloq_macro.h  install-eloqdb-ubuntu2004.sh  log_wrapper.h  metrics_registry_impl.cpp  metrics_registry_impl.h  sequences.cpp  sequences.h  (+2 more)
storage/eloq/mysql-test/: README.md
storage/eloq/mysql-test/eloq_basic/: my.cnf
storage/eloq/mysql-test/eloq_basic/include/: have_range_partition.inc  update_use_source_eloq.inc
storage/eloq/mysql-test/eloq_basic/r/: alter_table.result  auto_commit.result  batch_pk_load_s.result  create_drop_index.result  data_type.result  drop_table.result  fault_inject_term_neg_Execute.result  flush_undo_while_ckpt.result  isolation_level_for_locking.result  isolation_level_for_mvcc.result  isolation_level_for_occ.result  key_cache.result  magic_table_name.result  mvcc_scan.result  mvcc_scan_sk.result  pushdown_cond.result  range_split_keycache.result  s_scan_remainer_lock.result  select_for_update_and_share.result  select_for_update_and_share_occ.result  single_auto_increment.result  single_dead_lock_check.result  single_node.result  statistics.result  temporary_table.result  unsupported_sql.result  update_record_with_sk.result  upsert_table_recovery.result
storage/eloq/mysql-test/eloq_basic/t/: alter_table.test  alter_table_recovery.test  auto_commit.test  batch_pk_load_s.test  create_drop_table_recovery.test  data_store_error.test  data_type.test  deadlock_handling.cnf  flush_undo_while_ckpt.cnf  flush_undo_while_ckpt.test  isolation_level_for_locking.cnf  isolation_level_for_mvcc.cnf  isolation_level_for_mvcc.test  key_cache.cnf  mvcc_read_after_flushing_deleted_record.test  mvcc_read_unique_sk_after_flushing_deleted_record.test  mvcc_scan.test  mvcc_scan_sk_rc_isolvl.test  mvcc_unique_sk_lookup.test  poor_performance.test  pushdown_cond.test  read_committed_sk_scan.test  s_scan_remainer_lock.test  secondary_key.test  select_for_update_and_share.cnf  select_for_update_and_share.test  select_for_update_and_share_occ.test  single_dead_lock_check.cnf  single_node.cnf  single_node.test  statistics.test  temporary_table.test  update_record_with_sk.test  upsert_table_recovery.test
storage/eloq/mysql-test/eloq_main/: my.cnf
storage/eloq/mysql-test/eloq_main/include/: bytes_eloq.inc  ctype_czech_eloq.inc  ctype_eloq_like.inc  ctype_like_range_mdev14350_eloq.inc  ctype_unescape_eloq.inc  ctype_utf8_ilseq_eloq.inc  dbt3_s001_eloq.inc  equal_fields_propagation_datetime_eloq.inc  function_defaults_eloq.inc  have_utf8mb4_eloq.inc  ipv6_clients_eloq.inc  mrr_tests_eloq.inc  switch_to_mysql_global_priv_eloq.inc  switch_to_mysql_user_eloq.inc  type_hrtime_eloq.inc
storage/eloq/mysql-test/eloq_main/r/: 1st.result  auto_increment.result  bench_count_distinct.result  bug12427262.result  bug46760.result  case.result  check_constraint_show.result  commit.result  compress.result  connect_debug.result  count_distinct.result  create.result  create_drop_function.result  create_drop_index.result  cte_nonrecursive.result  cte_nonrecursive_not_embedded.result  cte_recursive.result  ctype_big5.result  ctype_cp1251.result  ctype_create.result  ctype_euckr.result  ctype_gb2312.result  ctype_latin1.result  ctype_latin2.result  ctype_many.result  ctype_sjis.result  ctype_tis620.result  ctype_uca_innodb.result  ctype_utf8.result  custom_aggregate_functions.result  date_formats.result  delete_returning_grant.result  delete_use_source.result  derived.result  derived_cond_pushdown.result  derived_opt.result  dyncol.result  empty_string_literal.result  endspace.result  error_simulation.result  (+154 more)
storage/eloq/mysql-test/eloq_main/t/: auto_increment.test  bench_count_distinct.test  bug46760.test  bug47671-master.opt  comment_index.test  commit.opt  compress.test  connect.cnf  connect_debug.test  consistent_snapshot.opt  constraints.test  count_distinct3.test  crash_commit_before-master.opt  create_drop_role.test  create_or_replace.test  create_select_tmp.test  cte_nonrecursive.test  cte_nonrecursive_not_embedded.test  cte_recursive.test  ctype_collate.test  ctype_create.test  ctype_eucjpms.test  ctype_euckr.test  ctype_gb2312.test  ctype_latin1.test  ctype_latin2_ch.test  ctype_ldml.test  ctype_mb.test  ctype_sjis.test  ctype_uca.test  ctype_utf16.test  ctype_utf32.test  ctype_utf8.test  ctype_utf8mb4_innodb-master.opt  custom_aggregates_i_s.test  default.test  derived_view.test  empty_user_table.test  endspace.test  engine_error_in_alter-8453.test  (+187 more)
storage/eloq/mysql-test/eloq_multi/: my.cnf
storage/eloq/mysql-test/eloq_multi/include/: mono_connection.inc  mono_init.inc
storage/eloq/mysql-test/eloq_multi/r/: alter_view.result  batch_pk_load.result  bug172.result  create_after_drop.result  (+10 more)
storage/eloq/mysql-test/mono_basic/: data_substrate.cnf  disabled.def  my.cnf
storage/eloq/mysql-test/mono_main/: data_substrate.cnf  disabled.def  my.cnf
storage/eloq/mysql-test/mono_multi/: data_substrate1.cnf  data_substrate2.cnf  data_substrate3.cnf  disabled.def  my.cnf
storage/eloq/store_handler/: bigtable_handler.cpp  bigtable_handler.h  bigtable_scanner.cpp  bigtable_scanner.h  cass_big_number.cpp  cass_big_number.h  cass_handler.cpp  cass_handler.h  cass_scanner.cpp  cass_scanner.h  dynamo_handler.cpp  dynamo_handler.h  dynamo_scanner.cpp  dynamo_scanner.h  kv_store.h  partition.h
storage/rocksdb/unittest/: CMakeLists.txt
(+787 files in other folders)
